--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,7 +8,7 @@
   <% @restaurants.each do |restaurant| %>
   <div class="col-4">
 
-  <div class="card" style="width: 18rem;">
+  <div class="card mt-3" style="width: 18rem;">
     <%= image_tag 'restaurant.jpg'%>
     <div class="card-body">
       <h5 class="card-title"><%= restaurant.name %></h5>
