--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -3,9 +3,9 @@
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1>Create a new restaurant</h1>
       <%= simple_form_for @restaurant do |f| %>
-        <%= f.input :name %>
-        <%= f.input :address %>
-        <%= f.input :phone_number %>
+        <%= f.input :name, placeholder: 'Nome do Restaurant' %>
+        <%= f.input :address, placeholder: "Endereço" %>
+        <%= f.input :phone_number, placeholder:"phone" %>
        <%= f.input :category, collection: Restaurant::CATEGORIES %>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
