--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,2 +1,17 @@
 <h1>Restaurants#edit</h1>
-<p>Find me in app/views/restaurants/edit.html.erb</p>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <h1>Create a new restaurant</h1>
+      <%= simple_form_for @restaurant do |f| %>
+        <%= f.input :name, placeholder: 'Nome do Restaurant' %>
+        <%= f.input :address, placeholder: "Endereço" %>
+        <%= f.input :phone_number, placeholder:"phone" %>
+       <%= f.input :category, collection: Restaurant::CATEGORIES %>
+        <%= f.submit class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
