--- a/app/assets/stylesheets/components/cardshow.scss
+++ b/app/assets/stylesheets/components/cardshow.scss
@@ -65,7 +65,11 @@ main{
     }
 
     .featured_text{
-      h1{
+      // display: flex;
+      // align-items: center;
+
+
+      h2{
         margin: 0;
         padding: 0;
         font-weight: 800;
@@ -73,6 +77,7 @@ main{
         font-size: 64px;
         line-height: 50px;
         color: #181e28;
+        // margin-right: 10px;
       }
 
       p{
