--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,39 +1,65 @@
-
-
-    <div class="card">
-      <div class="card__title">
-        <div class="icon">
-          <%= link_to root_path do %>
-            <i class="fa fa-arrow-left"></i>
-          <% end %>
-        </div>
+<div class="card">
+  <div class="card__title">
+    <div class="icon">
+      <%= link_to root_path do %>
+      <i class="fa fa-arrow-left"></i>
+      <% end %>
+    </div>
+  </div>
+  <div class="card__body">
+    <div class="half">
+      <div class="featured_text">
+        <h2> <%= @restaurant.name %> </h2>
+        <p class="price mt-2"><%= @restaurant.category %></p>
       </div>
-      <div class="card__body">
-        <div class="half">
-          <div class="featured_text">
-            <h2> <%= @restaurant.name %> </h2>
-            <p class="price mt-2"><%= @restaurant.category %></p>
-          </div>
-          <div class="image">
-           <%= image_tag "restaurant.jpg" %>
-          </div>
-          <%= link_to "Editar",  edit_restaurant_path(@restaurant), class: "btn btn-primary mt-3" %>
-        </div>
-        <div class="half">
-          <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem nam pariatur voluptate perferendis, asperiores aspernatur! Porro similique consequatur, nobis soluta minima, quasi laboriosam hic cupiditate perferendis esse numquam magni.</p>
-          </div>
-          <span class="stock"><i class="fa fa-pen"></i> In stock</span>
-          <div class="reviews">
-            <ul class="stars">
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star-o"></i></li>
-            </ul>
-            <span>(64 reviews)</span>
-          </div>
-        </div>
+      <div class="image">
+        <%= image_tag "restaurant.jpg" %>
+      </div>
+      <%= link_to "Editar",  edit_restaurant_path(@restaurant), class: "btn btn-primary mt-3" %>
+      <%= simple_form_for [@restaurant, @review] do |f| %>
+          <%= f.input :rating, collection: 0..5 %>
+          <%= f.input :content %>
+          <%= f.submit class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+    <div class="half">
+      <div class="description">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem nam pariatur voluptate perferendis,
+          asperiores aspernatur! Porro similique consequatur, nobis soluta minima, quasi laboriosam hic cupiditate
+          perferendis esse numquam magni.</p>
+      </div>
+      <span class="stock"><i class="fa fa-pen"></i> In stock</span>
+      <div class="reviews">
+        <ul class="stars">
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star-o"></i></li>
+        </ul>
+        <div class="list-group">
+        <% @restaurant.reviews.each do |review| %>
+          <li class="list-group-item">
+            <small>
+              <% count = 0 %>
+              <% 5.times do %>
+                <% if review.rating > count %>
+                  <i class="fa-solid fa-star"></i>
+                <% else %>
+                  <i class="fa-regular fa-star"></i>
+                <% end %>
+                <% count += 1 %>
+              <% end %>
+            </small>
+            <p><%= review.content %></p>
+          </li>
+        <% end %>
+      </div>
+
       </div>
     </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
